--- a/css/home.css
+++ b/css/home.css
@@ -101,7 +101,12 @@
     width: 600px;
     height: 300px;
     border: 1px solid gray;
-    border-radius: 6px;
+    /* border-radius: 6px; */
+}
+
+.why-section .why-card .video {
+    width: 100%;
+    height: 100%;
 }
 
 /* Features Section  */
@@ -209,6 +214,7 @@
 
 footer {
     background-color: #ffffff;
+    /* border-top: 1px solid gray; */
 }
 
 footer p {
@@ -220,24 +226,26 @@ footer p {
 footer .container {
     display: flex;
     padding: 20px 50px;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
 }
 
 footer .container .footer-logo {
     width: 50px;
+    margin-bottom: 10px;
 }
 
 footer .contact-info {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 
 footer .contact-info p {
     margin: 5px 0;
     font-size: 13px;
     font-style: italic;
+    margin: 0 7px;
 }
 
 footer .contact-info .link {
