--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,10 @@
     height: auto;
 }
 
+.header .fa-bars {
+    display: none;
+}
+
 .header .header-img {
     margin-top: 80px;
     width: 100%;
@@ -27,7 +31,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 50px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid lightgray;
     transition: all 0.5s ease;
     z-index: 2;
 }
@@ -251,4 +255,144 @@ footer .contact-info .link {
     text-decoration: none;
     margin-left: 5px;
     color: rgb(69, 69, 69);
+}
+
+
+/* Mobile  */
+
+@media screen and (max-width:1100px) and (min-width:800px) {
+
+    /* Why Section  */
+
+    .why-section {
+        padding: 40px 20px;
+        flex-direction: column;        
+    }
+    
+    .why-section .title {
+        font-size: 40px;
+        margin-bottom: 30px;
+        margin-right: 0;
+    }
+    
+    .why-section .why-card {
+        width: 600px;
+        height: 300px;
+    }
+    
+    .why-section .why-card .video {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width:799px) {
+    .why-section {
+        padding: 40px 20px;
+        flex-direction: column;        
+    }
+    
+    .why-section .title {
+        font-size: 30px;
+        margin-bottom: 30px;
+        margin-right: 0;
+    }
+    
+    .why-section .why-card {
+        width: 400px;
+        height: 200px;
+    }
+
+    /* Features Section  */
+
+    .features .features-container {
+        padding: 50px 30px;
+    }
+
+    .features .features-container .features-body .feature-card {
+        width: 350px;
+        height: 300px;
+    }
+
+    .features .features-container .features-body .feature-card .card-header .feature-text {
+        line-height: 20px;
+        font-size: 13px;
+    }
+
+
+    /* Navbar  */
+
+    .header .navbar {
+        flex-direction: column;
+        justify-content: center;
+        padding: 0;
+        transition: all 0.5s ease;
+        z-index: 2;
+    }
+
+    .header .navbar .fa-bars {
+        display: block;
+        position: absolute;
+        left: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 35px;
+        color: rgb(214, 214, 214);
+        cursor: pointer;
+    }
+
+    .header .navbar .logo-content {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header .navbar .logo-content .logo {
+        width: 50px;
+    }
+
+    .header .navbar .logo-content .logo-text {
+        display: none;
+    }
+
+    .header .navbar .sf-logo {
+        width: 20px;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+
+    .header .navbar .nav-items {
+        padding: 0 30px;
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        position: absolute;
+        top: 80px;
+        background-color: white;
+        border-bottom: 1px solid lightgray;
+    }
+
+    .header .navbar .nav-items .nav-item {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .header .navbar .nav-items .nav-item:nth-child(2), .nav-item:nth-child(1) {
+        border-bottom: 1px solid lightgray;
+    }
+
+    .header .navbar .nav-items .nav-item .nav-link {
+        font-size: 13px;
+        padding: 10px 15px;
+        display: block;
+        width: 100px;
+        display: flex;
+        justify-content: center;
+        font-family: sans-serif;
+        color: gray;
+    }
+    
 }
