--- a/css/support.css
+++ b/css/support.css
@@ -13,26 +13,24 @@
     position: relative;
 }
 
-.header .img-section {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    margin-top: 80px;
+.header .fa-bars {
+    display: none;
 }
 
-.header .img-section .header-img {
+.header .img-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: auto;
+    height: 700px;
+    /* margin-top: 80px; */
+    background: url("/img/Purple\ Gradient\ Geometric\ Flat\ Advertising\ Background\ Wallpaper\ Image\ For\ Free\ Download\ -\ Pngtree\ 1.png") center center/cover;
 }
 
 .header .img-section .img-content {
-    position: absolute;
     width: 700px;
     height: 300px;
     background-color: white;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border-radius: 8px;
     padding: 30px;
     display: flex;
@@ -171,4 +169,130 @@ footer .contact-info .link {
     text-decoration: none;
     margin-left: 5px;
     color: rgb(69, 69, 69);
+}
+
+
+/* Mobile  */
+
+@media screen and (max-width:799px) {
+
+    .header .img-section .img-content {
+        position: absolute;
+        width: 500px;
+        height: 180px;
+        background-color: white;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 8px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header .img-section .img-content .logo {
+        width: 40px;
+        height: 37px;
+    }
+    
+    .header .img-section .img-content .title {
+        font-size: 18px;
+        font-family: sans-serif;
+        margin-top: 10px;
+        font-weight: 400;
+    }
+    
+    .header .img-section .img-content .text {
+        font-size: 12px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        font-style: italic;
+    }
+    
+    .header .img-section .img-content .btn-blue {
+        font-size: 10px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        padding: 5px 10px;
+        text-decoration: none;
+        color: white;
+        background-color: rgb(19, 106, 200);
+        border-radius: 3px;
+    }
+
+    /* Navbar  */
+
+    .header .navbar {
+        flex-direction: column;
+        justify-content: center;
+        padding: 0;
+        transition: all 0.5s ease;
+        z-index: 2;
+    }
+
+    .header .navbar .fa-bars {
+        display: block;
+        position: absolute;
+        left: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 35px;
+        color: rgb(214, 214, 214);
+        cursor: pointer;
+    }
+
+    .header .navbar .logo-content {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header .navbar .logo-content .logo {
+        width: 50px;
+    }
+
+    .header .navbar .logo-content .logo-text {
+        display: none;
+    }
+
+    .header .navbar .sf-logo {
+        width: 20px;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+
+    .header .navbar .nav-items {
+        padding: 0 30px;
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        position: absolute;
+        top: 80px;
+        background-color: white;
+        border-bottom: 1px solid lightgray;
+    }
+
+    .header .navbar .nav-items .nav-item {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .header .navbar .nav-items .nav-item:nth-child(2), .nav-item:nth-child(1) {
+        border-bottom: 1px solid lightgray;
+    }
+
+    .header .navbar .nav-items .nav-item .nav-link {
+        font-size: 13px;
+        padding: 10px 15px;
+        display: block;
+        width: 100px;
+        display: flex;
+        justify-content: center;
+        font-family: sans-serif;
+        color: gray;
+    }
 }
