--- a/css/support.css
+++ b/css/support.css
@@ -221,7 +221,7 @@ footer .contact-info .link {
         border-radius: 3px;
     }
 
-    /* Navbar  */
+    /* Header  */
 
     .header .navbar {
         flex-direction: column;
@@ -294,5 +294,63 @@ footer .contact-info .link {
         justify-content: center;
         font-family: sans-serif;
         color: gray;
+    }
+
+    /* Footer  */
+
+    footer .contact-info {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+    }
+}
+
+
+@media screen and (max-width:500px) {
+    .header .img-section .img-content {
+        position: absolute;
+        width: 350px;
+        height: 200px;
+        background-color: white;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 8px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header .img-section .img-content .logo {
+        width: 40px;
+        height: 35px;
+    }
+    
+    .header .img-section .img-content .title {
+        font-size: 15px;
+        font-family: sans-serif;
+        margin-top: 10px;
+        font-weight: 400;
+    }
+    
+    .header .img-section .img-content .text {
+        font-size: 10px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        font-style: italic;
+        text-align: center;
+    }
+    
+    .header .img-section .img-content .btn-blue {
+        font-size: 10px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        padding: 8px 15px;
+        text-decoration: none;
+        color: white;
+        background-color: rgb(19, 106, 200);
+        border-radius: 5px;
     }
 }
