--- a/css/home.css
+++ b/css/home.css
@@ -82,34 +82,62 @@
 }
 
 
-/* Why Section */
+/* Support Section */
 
-.why-section {
-    padding: 70px 0;
+.support-section {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 500px;
+    background: linear-gradient(180deg, rgba(77,0,116,1) 0%, rgba(190,91,191,1) 54%, rgba(253,187,255,1) 100%);
+    border-bottom: 1px solid white;
+}
+
+.support-section .support-content {
+    width: 700px;
+    height: 300px;
+    background-color: white;
+    border-radius: 8px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid gray ;
+    border-radius: 4px;
     
 }
 
-.why-section .title {
+.support-section .support-content .logo {
+    width: 80px;
+    height: 73px;
+}
+
+.support-section .support-content .title {
+    font-size: 25px;
     font-family: sans-serif;
-    font-weight:lighter;
-    font-size: 50px;
-    margin-right: 100px;
-    color: rgb(56, 56, 56);
+    margin-top: 20px;
+    font-weight: 400;
+    /* color: white; */
 }
 
-.why-section .why-card {
-    width: 600px;
-    height: 300px;
-    border: 1px solid gray;
-    /* border-radius: 6px; */
+.support-section .support-content .text {
+    font-size: 15px;
+    font-family: sans-serif;
+    margin-top: 30px;
+    font-style: italic;
+    /* color: white; */
 }
 
-.why-section .why-card .video {
-    width: 100%;
-    height: 100%;
+.support-section .support-content .btn-blue {
+    font-size: 15px;
+    font-family: sans-serif;
+    margin-top: 30px;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+    background-color: rgb(19, 106, 200);
+    border-radius: 5px;
 }
 
 /* Features Section  */
@@ -260,47 +288,50 @@ footer .contact-info .link {
 
 /* Mobile  */
 
-@media screen and (max-width:1100px) and (min-width:800px) {
-
-    /* Why Section  */
-
-    .why-section {
-        padding: 40px 20px;
-        flex-direction: column;        
-    }
-    
-    .why-section .title {
-        font-size: 40px;
-        margin-bottom: 30px;
-        margin-right: 0;
-    }
-    
-    .why-section .why-card {
-        width: 600px;
-        height: 300px;
-    }
-    
-    .why-section .why-card .video {
-        width: 100%;
-        height: 100%;
-    }
-}
-
 @media screen and (max-width:799px) {
-    .why-section {
-        padding: 40px 20px;
-        flex-direction: column;        
+     .support-section .support-content {
+        position: absolute;
+        width: 500px;
+        height: 180px;
+        background-color: white;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 8px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+     .support-section .support-content .logo {
+        width: 40px;
+        height: 37px;
     }
     
-    .why-section .title {
-        font-size: 30px;
-        margin-bottom: 30px;
-        margin-right: 0;
+     .support-section .support-content .title {
+        font-size: 18px;
+        font-family: sans-serif;
+        margin-top: 10px;
+        font-weight: 400;
     }
     
-    .why-section .why-card {
-        width: 400px;
-        height: 200px;
+     .support-section .support-content .text {
+        font-size: 12px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        font-style: italic;
+    }
+    
+     .support-section .support-content .btn-blue {
+        font-size: 10px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        padding: 5px 10px;
+        text-decoration: none;
+        color: white;
+        background-color: rgb(19, 106, 200);
+        border-radius: 3px;
     }
 
     /* Features Section  */
@@ -405,4 +436,52 @@ footer .contact-info .link {
         text-align: center;
     }
     
+}
+
+@media screen and (max-width:500px) {
+     .support-section .support-content {
+        position: absolute;
+        width: 350px;
+        height: 200px;
+        background-color: white;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 8px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+     .support-section .support-content .logo {
+        width: 40px;
+        height: 35px;
+    }
+    
+     .support-section .support-content .title {
+        font-size: 15px;
+        font-family: sans-serif;
+        margin-top: 10px;
+        font-weight: 400;
+    }
+    
+     .support-section .support-content .text {
+        font-size: 10px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        font-style: italic;
+        text-align: center;
+    }
+    
+     .support-section .support-content .btn-blue {
+        font-size: 10px;
+        font-family: sans-serif;
+        margin-top: 20px;
+        padding: 8px 15px;
+        text-decoration: none;
+        color: white;
+        background-color: rgb(19, 106, 200);
+        border-radius: 5px;
+    }
 }
